--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.6.1",
     "react-chartjs-2": "^2.6.1",
     "react-dom": "^15.6.1",
+    "react-metrics-graphics": "^0.6.2",
     "react-scripts": "1.0.11",
     "request": "^2.81.0"
   },
