--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-chartjs-2": "^2.6.1",
     "react-dom": "^15.6.1",
     "react-metrics-graphics": "^0.6.2",
-    "react-scripts": "1.0.11",
+    "react-scripts": "^1.0.11",
+    "react-select-box": "^3.0.1",
     "request": "^2.81.0"
   },
   "scripts": {
