--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "axios": "^0.16.2",
     "chart.js": "^2.6.0",
     "dateformat": "^2.0.0",
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-chartjs-2": "^2.6.1",
     "react-dom": "^15.6.1",
     "react-metrics-graphics": "^0.6.2",
     "react-scripts": "^1.0.11",
-    "react-select-box": "^3.0.1",
+    "react-select": "^1.0.0-rc.10",
     "request": "^2.81.0"
   },
   "scripts": {
