--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dateformat": "^2.0.0",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.5",
     "react-chartjs-2": "^2.6.1",
     "react-dom": "^15.6.1",
     "react-metrics-graphics": "^0.6.2",
