--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "dependencies": {
     "axiom": "^0.1.6",
     "axios": "^0.16.2",
+    "bootstrap4": "0.0.1-security",
     "chart.js": "^2.6.0",
     "dateformat": "^2.0.0",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.5",
     "react-chartjs-2": "^2.6.1",
     "react-dom": "^15.6.1",
     "react-metrics-graphics": "^0.6.2",
     "react-scripts": "^1.0.11",
     "react-select": "^1.0.0-rc.10",
+    "reactstrap": "^5.0.0-alpha.3",
     "request": "^2.81.0"
   },
   "scripts": {
